@@ -1,4 +1,3 @@
-
 # Copyright (C) 2013 Irkutsk Diagnostic Center.
 #
 # This program is free software; you can redistribute it and/or modify
